Replace deprecated wrapper constructors with valueOf methods
Replace deprecated constructor calls for Integer and Double with their
respective valueOf() factory methods for better performance and memory
efficiency.

Changes:
- Savegame.java: Changed 'new Integer(id)' to 'Integer.valueOf(id)'
- ZonePoint.java: Changed 'new Double(x)' to 'Double.valueOf(x)'
- WherigoLib.java: Changed 'new Double(0)' to 'Double.valueOf(0)'

These valueOf() methods use cached instances for common values, reducing
object allocation and improving performance.